ui: finestre avviso per errori inserimento players